--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 main:
   - title: "Narratives"
     url: /digital-narrative/
-  - title: "Posts"
-    url: /posts/
+  - title: "Assignments"
+    url: /assignments/
   - title: "Final Presentation"
     url: /final/
   - title: "Tags"
