--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ plugins:
 author:
   name   : "Vy Bui"
   avatar : "/assets/images/bio-photo.png"
-  bio    : "My website for Spring 26 Introduction to Digital Humanities course!"
+  bio    : "Hi, my name is Vy (pronounced: V)! This is my website for Spring 26 Introduction to Digital Humanities course!"
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
